# localdoc-tk

./: .gitignore  README.md  pyproject.toml
localdoc_tk/: __init__.py  __main__.py  application.py  assets.py  constants.py  frames.py
localdoc_tk/frames/: __init__.py  bars.py  package.py  package_stack.py
